fixed accordion func

--- a/faqs.html
+++ b/faqs.html
@@ -185,9 +185,9 @@
                   >
                 </div>
                 <div class="envelope">
-                  <a href="mailto:info@thewestconsult.com "
+                  <a href="mailto:safety.westconsult@gmail.com"
                     ><i class="fa-solid fa-envelope"></i>
-                   info@thewestconsult.com </a
+                    safety.westconsult@gmail.com</a
                   >
                 </div>
               </div>
@@ -221,14 +221,18 @@
                   class="tp-header__right-box d-flex justify-content-end align-items-center"
                 >
                   <div class="tp-header__right d-flex align-items-center">
-                    
+                    <div class="tp-header-search search-open-btn">
+                      <a href="javascript:void(0);">
+                        <i class="fa-regular fa-magnifying-glass"></i
+                      ></a>
+                    </div>
                     <div class="tp-header__contact-number">
                       <div class="sm-clist__icon">
                         <i class="flaticon-telephone"></i>
                       </div>
                       <div class="sm-clist__text text-start ml-15 mr-25">
                         <span>Call Us Anytime</span>
-                        <a href="tel:+78690989067">+98 656 768 6789 </a>
+                        <a href="tel:+18723340670">+1 (872) 334-0670</a>
                       </div>
                     </div>
                     <div class="tp-header-btn">
@@ -399,7 +403,7 @@
                   <div class="card-header" id="headingTwo">
                     <span class="mb-0">
                       <button
-                        class="btn btn-link"
+                        class="btn btn-link collapsed"
                         data-bs-toggle="collapse"
                         data-bs-target="#collapseTwo"
                         aria-expanded="false"
@@ -412,7 +416,7 @@
                   </div>
                   <div
                     id="collapseTwo"
-                    class="collapse show"
+                    class="collapse"
                     aria-labelledby="headingTwo"
                     data-bs-parent="#accordion1"
                     style=""
@@ -565,23 +569,23 @@
             <div class="pe-xl-6">
               <div id="accordion1" class="accordion-style">
                 <div class="card mb-30">
-                  <div class="card-header" id="headingOne">
+                  <div class="card-header" id="headingSeven">
                     <span class="mb-0">
                       <button
                         class="btn btn-link collapsed"
                         data-bs-toggle="collapse"
-                        data-bs-target="#collapseOne"
+                        data-bs-target="#collapseSeven"
                         aria-expanded="false"
-                        aria-controls="collapseOne"
+                        aria-controls="collapseSeven"
                       >
                         What is a DQ file, and why do I need it?
                       </button>
                     </span>
                   </div>
                   <div
-                    id="collapseOne"
+                    id="collapseSeven"
                     class="collapse"
-                    aria-labelledby="headingOne"
+                    aria-labelledby="headingSeven"
                     data-bs-parent="#accordion1"
                     style=""
                   >
@@ -594,23 +598,23 @@
                   </div>
                 </div>
                 <div class="card mb-30">
-                  <div class="card-header" id="headingTwo">
+                  <div class="card-header" id="headingEight">
                     <span class="mb-0">
                       <button
                         class="btn btn-link collapsed"
                         data-bs-toggle="collapse"
-                        data-bs-target="#collapseTwo"
+                        data-bs-target="#collapseEight"
                         aria-expanded="false"
-                        aria-controls="collapseTwo"
+                        aria-controls="collapseEight"
                       >
                         Do you provide assistance with permits?
                       </button>
                     </span>
                   </div>
                   <div
-                    id="collapseTwo"
-                    class="collapse show"
-                    aria-labelledby="headingTwo"
+                    id="collapseEight"
+                    class="collapse"
+                    aria-labelledby="headingEight"
                     data-bs-parent="#accordion1"
                     style=""
                   >
@@ -621,23 +625,23 @@
                   </div>
                 </div>
                 <div class="card mb-30">
-                  <div class="card-header" id="headingThree">
+                  <div class="card-header" id="headingNine">
                     <span class="mb-0">
                       <button
                         class="btn btn-link collapsed"
                         data-bs-toggle="collapse"
-                        data-bs-target="#collapseThree"
+                        data-bs-target="#collapseNine"
                         aria-expanded="false"
-                        aria-controls="collapseThree"
+                        aria-controls="collapseNine"
                       >
                         How can I improve my safety performance?
                       </button>
                     </span>
                   </div>
                   <div
-                    id="collapseThree"
+                    id="collapseNine"
                     class="collapse"
-                    aria-labelledby="headingThree"
+                    aria-labelledby="headingNine"
                     data-bs-parent="#accordion1"
                   >
                     <div class="card-body">
@@ -662,23 +666,23 @@
             <div class="pe-xl-6">
               <div id="accordion" class="accordion-style">
                 <div class="card mb-30">
-                  <div class="card-header" id="headingfour">
+                  <div class="card-header" id="headingten">
                     <span class="mb-0">
                       <button
                         class="btn btn-link collapsed"
                         data-bs-toggle="collapse"
-                        data-bs-target="#collapsefour"
+                        data-bs-target="#collapseten"
                         aria-expanded="false"
-                        aria-controls="collapsefour"
+                        aria-controls="collapseten"
                       >
                         What is the cost of your services?
                       </button>
                     </span>
                   </div>
                   <div
-                    id="collapsefour"
+                    id="collapseten"
                     class="collapse"
-                    aria-labelledby="headingfour"
+                    aria-labelledby="headingten"
                     data-bs-parent="#accordion"
                   >
                     <div class="card-body">
@@ -689,23 +693,23 @@
                   </div>
                 </div>
                 <div class="card mb-30">
-                  <div class="card-header" id="headingfive">
+                  <div class="card-header" id="headingeleven">
                     <span class="mb-0">
                       <button
                         class="btn btn-link collapsed"
                         data-bs-toggle="collapse"
-                        data-bs-target="#collapsefive"
+                        data-bs-target="#collapseeleven"
                         aria-expanded="false"
-                        aria-controls="collapsefive"
+                        aria-controls="collapseeleven"
                       >
                         Do you handle driver hiring and background checks?
                       </button>
                     </span>
                   </div>
                   <div
-                    id="collapsefive"
+                    id="collapseeleven"
                     class="collapse"
-                    aria-labelledby="headingfive"
+                    aria-labelledby="headingeleven"
                     data-bs-parent="#accordion"
                   >
                     <div class="card-body">
@@ -717,23 +721,23 @@
                   </div>
                 </div>
                 <div class="card mb-30">
-                  <div class="card-header" id="headingsix">
+                  <div class="card-header" id="headingtwelve">
                     <span class="mb-0">
                       <button
                         class="btn btn-link collapsed"
                         data-bs-toggle="collapse"
-                        data-bs-target="#collapsesix"
+                        data-bs-target="#collapsetwelve"
                         aria-expanded="false"
-                        aria-controls="collapsesix"
+                        aria-controls="collapsetwelve"
                       >
                         What is the process for drug and alcohol testing?
                       </button>
                     </span>
                   </div>
                   <div
-                    id="collapsesix"
+                    id="collapsetwelve"
                     class="collapse"
-                    aria-labelledby="headingsix"
+                    aria-labelledby="headingtwelve"
                     data-bs-parent="#accordion"
                   >
                     <div class="card-body">
