--- a/error.html
+++ b/error.html
@@ -145,6 +145,8 @@
                                   <a href="Insurance_01.html">About Us</a>
                                 </li>
                                 <li><a href="contact.html">Contact</a></li>
+                          <li><a href="fields.html">Forms</a></li>
+
                               </ul>
                             </nav>
                           </div>
