--- a/faqs.html
+++ b/faqs.html
@@ -212,6 +212,7 @@
                             <a class="active" href="faqs.html">FAQ</a>
                           </li>
                           <li><a href="contact.html">Contact</a></li>
+                          <li><a href="fields.html">Forms</a></li>
                         </ul>
                       </nav>
                     </div>
