--- a/fields.html
+++ b/fields.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>West Consult Inc - Contact Us</title>
+    <title>West Consult Inc - Forms</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -180,15 +180,15 @@
                     href="https://www.google.com.co/maps/place/890+N+State+St,+Elgin,+IL+60123,+США/@42.0554352,-88.2985164,17z/data=!3m1!4b1!4m6!3m5!1s0x880f056ff4b76fe9:0x846ef8c3930b5206!8m2!3d42.0554352!4d-88.2959415!16s%2Fg%2F11cp7ym2dw?entry=ttu&g_ep=EgoyMDI1MDMxNy4wIKXMDSoASAFQAw%3D%3D"
                     target="_blank"
                   >
-                    <i class="fa-sharp fa-solid fa-location-dot"></i> 890 N
-                    State St Elgin, IL 60123</a
+                    <i class="fa-sharp fa-solid fa-location-dot"></i> 66
+                    Broklyne Golden Street, USA</a
                   >
                 </div>
                 <div class="envelope">
-                  <a href="mailto:info@thewestconsult.com "
+                  <a href="mailto:safety.westconsult@gmail.com"
                     ><i class="fa-solid fa-envelope"></i>
-                    info@thewestconsult.com
-                  </a>
+                    safety.westconsult@gmail.com</a
+                  >
                 </div>
               </div>
             </div>
@@ -211,10 +211,9 @@
                           <li>
                             <a href="faqs.html">FAQ</a>
                           </li>
+                          <li><a href="contact.html">Contact</a></li>
                           <li>
-                            <a class="active" href="contact.html">Contact</a>
-                          <li><a href="fields.html">Forms</a></li>
-
+                            <a class="active" href="fields.html">Forms</a>
                           </li>
                         </ul>
                       </nav>
@@ -225,6 +224,11 @@
                   class="tp-header__right-box d-flex justify-content-end align-items-center"
                 >
                   <div class="tp-header__right d-flex align-items-center">
+                    <div class="tp-header-search search-open-btn">
+                      <a href="javascript:void(0);">
+                        <i class="fa-regular fa-magnifying-glass"></i
+                      ></a>
+                    </div>
                     <div class="tp-header__contact-number">
                       <div class="sm-clist__icon">
                         <i class="flaticon-telephone"></i>
@@ -292,8 +296,8 @@
               </div>
               <div class="tpoffcanvas__contact-content-content">
                 <a
-                  href="https://www.google.com/maps/search/890+N+State+St+Elgin+IL+60123/@42.0554352,-88.2985164,17z/data=!3m1!4b1"
-                  >890 N State St Elgin, IL 60123
+                  href="https://www.google.com/maps/search/86+Road+Broklyn+Street,+600+New+York,+USA/@40.6897806,-74.0278086,12z/data=!3m1!4b1"
+                  >86 Road Broklyn Street, 600
                 </a>
               </div>
             </div>
@@ -344,9 +348,9 @@
                 <div class="breadcrumb__list mb-10">
                   <span><a href="index.html">WEST CONSULT </a></span>
                   <span class="dvdr"> / </span>
-                  <span class="sub-page-black">Contact Us</span>
+                  <span class="sub-page-black">Forms</span>
                 </div>
-                <h3 class="breadcrumb__title mb-20">Contact Us</h3>
+                <h3 class="breadcrumb__title mb-20">Forms</h3>
               </div>
             </div>
           </div>
@@ -354,119 +358,89 @@
       </div>
     </div>
     <!--  breadcrumb-area  end -->
-    <!-- contact area start -->
-    <div class="tp-faq-area pb-120 pt-50 grey-bg-1 p-relative">
+    <!-- error area start -->
+    <div class="tp-faq-area pt-125 pb-100">
       <div class="container">
         <div class="row">
-          <div class="col-xl-5 col-lg-5 col-md-6 col-12">
-            <div class="contact">
-              <div class="contact__form mb-30">
-                <form id="contact-form_id" class="сontact-form-validated">
-                  <div class="contact__form-wrap">
-                    <div class="tp-form-box">
-                      <span class="tp-form-subtitle right">contact us</span>
-                      <h2 class="tp-form-title mb-30 mt-10">Write an email</h2>
-                    </div>
-                    <div class="contact__input">
-                      <input
-                        class="w-100"
-                        type="text"
-                        placeholder="Enter name"
-                        required=""
-                      />
-                    </div>
-                    <div class="contact__input">
-                      <input
-                        class="w-100"
-                        type="email"
-                        placeholder="Email address"
-                        required=""
-                      />
-                    </div>
-                    <div class="contact__input">
-                      <input
-                        class="w-100"
-                        type="text"
-                        placeholder="Phone number"
-                        required=""
-                      />
-                    </div>
-
-                    <div class="contact__input">
-                      <textarea
-                        class="w-100"
-                        placeholder="Message"
-                        required=""
-                      ></textarea>
-                    </div>
-
-                    <div class="contact__button">
-                      <button class="tp-btn-3" type="submit">
-                        SEND A MEASSAGE
+          <div
+            class="col-xl-6 col-lg-6 col-md-6"
+            data-wow-delay="200ms"
+            style="
+              visibility: visible;
+              animation-delay: 200ms;
+              animation-name: fadeIn;
+            "
+          >
+            <div class="pe-xl-6">
+              <div id="accordion1" class="accordion-style">
+                <div class="card mb-30">
+                  <div class="card-header" id="headingOne">
+                    <span class="mb-0">
+                      
+                      <button class="btn btn-link collapsed">
+                        What services does West Consult INC offer?
                       </button>
-                    </div>
+                    </span>
                   </div>
-                </form>
-                <p class="ajax-response"></p>
+                </div>
+                <div class="card mb-30">
+                  <div class="card-header" id="headingTwo">
+                    <span class="mb-0">
+                      <button class="btn btn-link collapsed">
+                        How do I know if my business is compliant with <br />
+                        DOT regulations?
+                      </button>
+                    </span>
+                  </div>
+                </div>
+                <div class="card mb-30">
+                  <div class="card-header" id="headingThree">
+                    <span class="mb-0">
+                      <button class="btn btn-link collapsed">
+                        What is SMS Score, and why is it important?
+                      </button>
+                    </span>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-xl-7 col-lg-7 col-md-6 col-12">
-            <div class="contact ml-40">
-              <div class="map-area">
-                <div class="tpmap-wrapper">
-                  <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2962.4284365379035!2d-88.2959415!3d42.055435200000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f056ff4b76fe9%3A0x846ef8c3930b5206!2zODkwIE4gU3RhdGUgU3QsIEVsZ2luLCBJTCA2MDEyMywg0KHQqNCQ!5e0!3m2!1sru!2skg!4v1742529787324!5m2!1sru!2skg"
-                    width="600"
-                    height="450"
-                    style="border: 0"
-                    allowfullscreen=""
-                    loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"
-                  ></iframe>
-                </div>
-              </div>
-              <div class="contact__wrap mt-25">
-                <div class="contact__info-item d-flex align-items-start mb-35">
-                  <div class="contact__info-icon">
-                    <i class="flaticon-phone-call-1"></i>
-                  </div>
-                  <div class="contact__info-text">
-                    <h4>+1 (872) 334-0670</h4>
+          <div
+            class="col-xl-6 col-lg-6 col-md-6"
+            data-wow-delay="200ms"
+            style="
+              visibility: visible;
+              animation-delay: 200ms;
+              animation-name: fadeIn;
+            "
+          >
+            <div class="pe-xl-6">
+              <div id="accordion" class="accordion-style">
+                <div class="card mb-30">
+                  <div class="card-header" id="headingfour">
+                    <span class="mb-0">
+                      <button class="btn btn-link collapsed">
+                        What types of insurance do you help with?
+                      </button>
+                    </span>
                   </div>
                 </div>
-                <div class="contact__info-item d-flex align-items-start mb-35">
-                  <div class="contact__info-icon">
-                    <i class="flaticon-email"></i>
-                  </div>
-                  <div class="contact__info-text">
-                    <h4>safety.westconsult@gmail.com</h4>
-                  </div>
-                </div>
-                <div class="contact__info-item d-flex align-items-start">
-                  <div class="contact__info-icon">
-                    <i class="flaticon-location-1"></i>
-                  </div>
-                  <div class="contact__info-text">
-                    <h4>890 N State St Elgin, IL 60123</h4>
+                <div class="card mb-30">
+                  <div class="card-header" id="headingfive">
+                    <span class="mb-0">
+                      <button class="btn btn-link collapsed">
+                        Do you handle driver hiring and background checks?
+                      </button>
+                    </span>
                   </div>
                 </div>
-                <div class="contact__social pt-30">
-                  <div class="icon">
-                    <ul>
-                      <li>
-                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
-                      </li>
-                    </ul>
+                <div class="card mb-30">
+                  <div class="card-header" id="headingsix">
+                    <span class="mb-0">
+                      <button class="btn btn-link collapsed">
+                        What is the Clearinghouse, and why is it important?
+                      </button>
+                    </span>
                   </div>
                 </div>
               </div>
@@ -475,33 +449,10 @@
         </div>
       </div>
     </div>
-    <!-- contact area end -->
-    <!-- cta  area start -->
-    <div
-      class="tp-cta-4__area p-relative cta-mlr"
-      data-background="assets/img/cta/cta-bg-4.png"
-    >
-      <div class="container">
-        <div class="tp-cta-4__bg">
-          <div class="row align-items-center">
-            <div class="col-xl-8">
-              <h3 class="cta-titile">Know about West Consult INC</h3>
-            </div>
-            <div class="col-xl-4">
-              <div class="tp-cta-4__right text-end">
-                <div class="tp-cta-4__btn pt-10">
-                  <a class="tp-btn-black" href="Insurance_01.html">Read More</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- cta  area end -->
+    <!-- error area end -->
     <!-- footer  area start -->
     <div class="footer__area" data-background="assets/img/footer/img.jpg">
-      <div class="footer__top pt-220 pb-90">
+      <div class="footer__top pt-120 pb-90">
         <div class="container">
           <div class="row">
             <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-6">
@@ -516,8 +467,8 @@
                 <div class="footer__widget-content">
                   <div class="footer__widget-info">
                     <p>
-                      WEST CONSULT INC Reliable Safety Services for the Trucking
-                      Industry
+                      Phasellus luctus nibh utfinibultricies. Nulla sit amet
+                      urna purus. Aenean vulputate libero nulla.
                     </p>
                     <div class="footer__social">
                       <ul>
@@ -559,20 +510,20 @@
                       <a
                         href="https://www.google.com/maps/@41.6758525,-86.2531698,18.17z"
                         target="_blank"
-                        >890 N State St Elgin, IL 60123</a
+                        >2390 NBW 2nd Ave, Miami FLT 33127, USA</a
                       >
                     </li>
                     <li>
                       <span>
                         <i class="fa-sharp fa-solid fa-phone"></i>
                       </span>
-                      <a href="tel:+806(000)8899">+1 (872) 334-0670</a>
+                      <a href="tel:+806(000)8899">+1 305 677-4352</a>
                     </li>
                     <li>
                       <span>
                         <i class="fa-solid fa-clock"></i>
                       </span>
-                      <a href="">Mon - Sat: 9:00 am - 5:00 pm Sunday: closed</a>
+                      <a href="">Mon - Sat: 8:00 am - 6:00 pm Sunday: closed</a>
                     </li>
                   </ul>
                 </div>
@@ -587,12 +538,7 @@
             <div class="row">
               <div class="col-xxl-12">
                 <div class="footer__copyright text-center">
-                  <p>
-                    © 2025 West Consult Inc. All Rights Reserved - Made by
-                    <a class="inctec" href="https://t.me/zakharhhh"
-                      >Inclusive Technology</a
-                    >
-                  </p>
+                  <p>© Copyright 2023, Insurez. All Rights Reserved</p>
                 </div>
               </div>
             </div>
@@ -615,6 +561,5 @@
     <script src="assets/js/imagesloaded-pkgd.js"></script>
     <script src="assets/js/ajax-form.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/send_message_from_contact_page.js"></script>
   </body>
 </html>
