--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
                             <a href="faqs.html">FAQ</a>
                           </li>
                           <li><a href="contact.html">Contact</a></li>
+                          <li><a href="fields.html">Forms</a></li>
                         </ul>
                       </nav>
                     </div>
