--- a/Insurance_01.html
+++ b/Insurance_01.html
@@ -214,6 +214,7 @@
                             <a href="faqs.html">FAQ</a>
                           </li>
                           <li><a href="contact.html">Contact</a></li>
+                          <li><a href="fields.html">Forms</a></li>
                         </ul>
                       </nav>
                     </div>
